@@ -5,8 +5,7 @@ export(pbart, mc.pbart)
 export(gbart, mc.gbart)
 export(hbart)
 export(ml.gbart)
-##export(gbmm, mc.gbmm)
-##export(surv.gbmm)
+export(liobart)
 export(abart, mc.abart)
 ##export(spbart, mc.spbart)
 export(stratrs, rs.pbart)
@@ -22,7 +21,7 @@ export(crisk2.mbart, mc.crisk2.mbart, mc.crisk2.mbart.pwbart)
 export(mc.cores.openmp)
 export(rtnorm, draw_lambda_i, rtgamma)
 export(gewekediag, spectrum0ar)
-##export(bartModelMatrix, class.ind)
+##export(class.ind)
 export(bartModelMatrix)
 export(srstepwise)
 export(read.trees)
@@ -31,22 +30,20 @@ export(FPD)   ## new S3 method: Friedman's partial dependence function
 export(HD)    ## new S3 method: Hot deck partial dependence function
 export(SHAP)  ## new S3 method: SHAP partial dependence function
 export(SHAP2) ## new S3 method: SHAP for two-way interactions
-##export(dpgbart)
-importFrom(nnet, class.ind)
 importFrom(Rcpp, evalCpp)
+importFrom(nlme, lme)
+importFrom(nnet, class.ind)
 importFrom(parallel, detectCores)
-importFrom(stats, ar, coef, cor, dbinom, dnorm, lm, predict, pnorm, qnorm, qchisq, plogis, qlogis, quantile, residuals, runif, sd, sigma, vcov)
-importFrom(utils, read.table)
+importFrom(stats, ar, coef, cor, dbinom, dnorm, lm, plogis, pnorm, predict, qchisq, qlogis, qnorm, quantile, residuals, runif, sd, sigma, vcov)
 importFrom(survival, survfit, Surv, survreg)
 importFrom(tools, psnice)
-importFrom(nlme, lme)
+importFrom(utils, read.table)
 S3method(HD, wbart)
 S3method(FPD, wbart)
 S3method(SHAP, wbart)
 S3method(SHAP2, wbart)
 S3method(SHAP, survbart)
 S3method(SHAP, crisk3bart)
-##S3method(hotdeck, wbart)
 S3method(predict, wbart)
 S3method(predict, pbart)
 S3method(predict, survbart)
