@@ -1,6 +1,7 @@
-Changes and New Features in 3.7 (2020-05-19):
+Changes and New Features in 3.7 (2020-05-27):
 	* Experimental support for Modified LISA: ml.gbart() function
 	* Experimental support for Heteroskedastic BART: hbart()
+	* Experimental support for LIO BART: liobart()
 	* Synching new S3 method arguments
 	* Use the subset combination weights (analagous to permutation
 	weighting scheme) for HD/SHAP/SHAP2 S3 methods
